# ArSend

./: README.md  package-lock.json  package.json  svelte.config.js  vite.config.js
context/: ArSend_Animation_System_V1.0.0.md
context/audit/: audit_v_1_0_0_arsend_backend_transfer_review.md
context/prd/: PRD_ArSend_V1.0.1.md  UPDATE_PRD_V1.0.1.md
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/src/: lib.rs  main.rs  network.rs  notification.rs  pairing.rs  security.rs  server.rs  transfer.rs
src/lib/components/: ApprovalModal.svelte  BottomNav.svelte  ConnectionBar.svelte  DeviceList.svelte  Dropzone.svelte  FileCard.svelte  FileIcon.svelte  FileProgress.svelte  PillSwitch.svelte  QRDisplay.svelte  QRScanner.svelte  ReceiveStandby.svelte  SettingsTab.svelte  TofuModal.svelte  WelcomeCarousel.svelte
src/lib/stores/: connection.ts  history.ts  settings.ts  transfer.ts  trust.ts
src/lib/utils/: format.ts  platform.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/history/: +page.svelte
src/routes/receive/: +page.svelte
src/routes/send/: +page.svelte
src/routes/settings/: +page.svelte
