[package]
name = "arsend"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "arsend_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.52.3", features = ["full"] }
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-native-roots", "connect"] }
webpki-roots = "1.0.7"
tokio-rustls = { version = "0.26.4", features = ["ring"] }
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
sha2 = "0.11.0"
rand = "0.8.5"
uuid = { version = "1.23.1", features = ["v4"] }
qrcode = "0.14.1"
local-ip-address = "0.6.12"
tauri-plugin-store = "2.4.3"
tauri-plugin-notification = "2.3.3"
tauri-plugin-barcode-scanner = "2.4.4"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
tauri-plugin-process = "2.3.1"
hex = "0.4.3"
rcgen = "0.14.8"
rustls-pemfile = "2.2.0"
rustls-pki-types = "1.14.1"
futures-util = "0.3.32"
dirs = "6.0.0"
tauri-plugin-os = "2.3.2"
whoami = "1"
lazy_static = "1.5.0"
mdns-sd = "0.19.1"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
ndk-context = "0.1"
